--- a/app/src/main/res/menu/dash.xml
+++ b/app/src/main/res/menu/dash.xml
@@ -14,4 +14,10 @@
         android:title="Refresh"
         app:showAsAction="withText"
         android:icon="@drawable/ref"/>
+
+    <item
+        android:id="@+id/log"
+        android:title="Logout"
+        app:showAsAction="withText"
+        android:icon="@drawable/ref"/>
 </menu>
