--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,7 @@
         <!--<item name="android:windowLightStatusBar" tools:targetApi="23">true</item>-->
         <!--<item name="android:statusBarColor">@color/aux1</item>-->
         <item name="android:textColorSecondary">@color/aux1</item>
+        <item name="android:windowBackground">@color/colorAccent</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
